# dt-weather-app

./: .dockerignore  .gitignore  Dockerfile  README.md  app.yaml  justfile  pyproject.toml
src/: __init__.py  main.py  models.py
src/routes/: health.py  weather.py
src/services/: weather_service.py
src/templates/: index.html
tests/unit/: test_api.py  test_weather_service.py
