[project]
name = "dt-weather-app"
version = "0.1.0"
description = "A simple weather API for DataTorque internal use. Returns weather data for cities."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", "B", "D", "I", "N", "Q", "C4", "C901",
    "E501", "UP", "RUF", "ERA", "PL", "TRY", "DTZ", "S", "BLE",
    "ARG", "SIM", "W",
]
ignore = ["ANN401", "D203", "D212", "D107", "PLR2004", "TRY003"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D", "ARG002", "BLE001", "PLW2901", "RUF001", "RUF003"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
exclude = [".venv**/*", "**/__pycache__", ".ruff_cache", ".pytest_cache"]
typeCheckingMode = "strict"
reportMissingImports = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
